tests/snapshots/keys_interactive__keys_interactive_alt_d@004.snap
---
source: tests/keys_interactive.rs
description: "input: interactive\noptions: -i --cmd true --cmd-query foo bar foo-bar\nafter:\n  @alt 'd'\n  @char '|'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/0                                                                        0/0"
"c> foo bar ||-|bar                                                              "
cursor: (24, 14)
