tests/snapshots/keys_interactive__keys_interactive_basic@002.snap
---
source: tests/keys_interactive.rs
description: "input: items [\"1\", \"2\", \"3\", \"4\"]\noptions: -i\nafter:\n  @type \"99\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  4                                                                             "
"  3                                                                             "
"  2                                                                             "
"> 1                                                                             "
"  4/4                                                                        0/0"
"c> 99                                                                           "
cursor: (24, 6)
